--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,9 @@
     "angular-resource": "^1.4.0",
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
-    "angular-touch": "^1.4.0"
+    "angular-touch": "^1.4.0",
+    "ng-file-upload": "^12.0.4",
+    "angular-ui-bootstrap-datetimepicker": "^1.4.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
